added a few projects

--- a/index.html
+++ b/index.html
@@ -145,13 +145,17 @@
               <p class="tab-links" onclick="opentab('certificates-tab')">Certificates</p>
             </div>
             <div class="tab-contents active-tab" id="about-tab">
-              <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My main goal is to contribute to the security of any system or data-asset.<br><br>
+              <p>I am a dedicated and ambitious Cybersecurity Technician offering specialized services in implementing and optimizing
+                SIEM tools, firewalls, and security solutions for businesses.
+                I thrive in a collaborative environment where I can help organizations strengthen their security posture and protect their valuable assets. <br><br>
 
-                My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication. <br><br>
+                My experience with NATO improved my discipline, strategic thinking, and ability to perform under pressure with confidence and clear communication.
+                These qualities enable me to handle complex security challenges and deliver effective solutions tailored to each client's needs. <br><br>
 
-                I value continuous learning and I am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.<br><br>
+                I am passionate about problem-solving, continuous learning, and staying ahead of the latest industry trends.
+                Whether you're looking to enhance your cybersecurity infrastructure or need expert guidance on security implementations, I'm here to help.
 
-                With that in mind, I am open to job opportunities where I can contribute, learn, and grow. If you have a role that aligns with my skills and experience, please don't hesitate to contact me.
+                If you're interested in working together, feel free to reach out! I'd love to discuss how I can support your business.</p>
             </div>
             <div class="tab-contents" id="skills-tab">
               <ul>
@@ -172,8 +176,8 @@
             <div class="tab-contents" id="certificates-tab">
               <ul>
                 <li><span>Google Cybersecurity Professional</span><br>Earned in 2024, covering fundamental cybersecurity concepts and practical security skills.</li>
-                <li><span>Microsoft Certified: Azure Fundamentals (AZ-900)</span><br>Achieved in 2024, demonstrating foundational knowledge of Azure cloud services.</li>
-                <li><span>Microsoft Certified: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Completed in 2025, focusing on security, compliance, and identity management in Azure.</li>
+                <li><span>Azure: Azure Fundamentals (AZ-900)</span><br>Achieved in 2024, demonstrating foundational knowledge of Azure cloud services.</li>
+                <li><span>Azure: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Completed in 2025, focusing on security, compliance, and identity management in Azure.</li>
               </ul>
             </div>
         </div>
@@ -201,10 +205,34 @@
             </div>
           </div>
           <div class="project">
-            <img src="./images/glpipic.png">
+            <img src="./images/gophish2.png">
             <div class="layer">
-              <h3>GLPI Integration</h3>
-              <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br><br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
+              <h3>GoPhish Usage</h3>
+              <p>Installed a GoPhish server on Proxmox to conduct phishing email tests on company employees who had recently attended a cybersecurity presentation. <br><br>
+                The goal was to assess the effectiveness of the presentation by evaluating employee responses to simulated phishing attempts.</p>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./images/pfsense.png">
+            <div class="layer">
+              <h3>Pfsense Configuration</h3>
+              <p>Installed and configured a pfSense solution to set up a robust firewall, restrict access to specific websites, and overall enhance network security. <br><br>
+                Additionally, implemented traffic monitoring, VPN setup, and intrusion detection features to ensure a more secure and controlled network environment. </p>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./images/shell.png">
+            <div class="layer">
+              <h3>PowerShell AD Automation</h3>
+              <p>I've Created a PowerShell script to automate user and group creation in Active Directory. <br><br>It ensures groups exist before adding members, enforcing consistency, and improving operational efficiency.</p>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./images/greenbone.png">
+            <div class="layer">
+              <h3>Openvas Greenbone</h3>
+              <p>Installed and configured OpenVAS on a Kali Linux virtual machine to conduct a deep network vulnerability analysis.<br><br>
+                By Performing scans to identify security flaws, misconfigurations, potential exploits across devices and services and also analysing the reports to prioritize risk mitigation strategies.</p>
             </div>
           </div>
           <div class="project">
@@ -214,12 +242,19 @@
               <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines on another network. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
             </div>
           </div>
-
           <div class="project">
-            <img src="./images/shell.png">
+            <img src="./images/Moneycounter2.png">
             <div class="layer">
-              <h3>PowerShell AD Automation</h3>
-              <p>I've Created a PowerShell script to automate user and group creation in Active Directory. <br><br>It ensures groups exist before adding members, enforcing consistency, and improving operational efficiency.</p>
+              <h3>Money Counter</h3>
+              <p>A Web application designed to track the user expenses and income while setting financial, monetary, and material goals. <br><br>
+                It includes a key feature that allows users to create groups for shared expenses, making it easier to track payments, ensuring a better financial management.</p>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./images/glpipic.png">
+            <div class="layer">
+              <h3>GLPI Integration</h3>
+              <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br><br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
             </div>
           </div>
         </div>
