--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <div class="header-text">
           <h1>Hi, I'm <span>Ruben</span><br>Mota From Portugal</h1>
           <p>Cybersecurity Technician</p>
+        </div>
+        <div class="container">
           <a href="#projects-me" class="button">PROJECTS</a>
         </div>
       </div>
