--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
           <h1>Hi, I'm <span>Ruben</span><br>Mota From Portugal</h1>
           <p>Cybersecurity Technician</p>
         </div>
-        <div class="container">
-          <a href="#projects-me" class="button">PROJECTS</a>
-        </div>
+        <a href="#projects-me" class="button">PROJECTS</a>
       </div>
     </div>
     <div class="wrapper">
@@ -162,24 +160,24 @@
             <div class="tab-contents" id="skills-tab">
               <ul>
                 <li><span>Programming & Query Languages</span><br>Proficient in Python, Ruby, JavaScript and SQL.</li>
-                <li><span>Operating Systems</span><br>Strong knowledge of Linux and Windows.</li>
-                <li><span>Penetration Testing Tools</span><br>Experienced using Nmap, Burp Suite, Hydra and Metasploit.</li>
-                <li><span>SIEM Tools</span><br>Experience with installation and operation of Wazuh, Snort, GLPI and Elastic Stack (ELK).</li>
+                <li><br><span>Operating Systems</span><br>Strong knowledge of Linux and Windows.</li>
+                <li><br><span>Penetration Testing Tools</span><br>Experienced using Nmap, Burp Suite, Hydra and Metasploit.</li>
+                <li><br><span>SIEM Tools</span><br>Experience with installation and operation of Wazuh, Snort, GLPI and Elastic Stack (ELK).</li>
               </ul>
             </div>
             <div class="tab-contents" id="experience-tab">
               <ul>
                 <li><span>Military Operative - NATO Mission</span><br>Served from 10/2016 - 03/2023, ensuring mission readiness, guiding new personnel and collaborating with NATO forces.</li>
-                <li><span>Teacher Assistant - Le Wagon</span><br>From 07/2023 - 12/2023, supported students in web programming, provided one-on-one guidance and conducted sessions 100% in English.</li>
-                <li><span>Junior Cybersecurity & IT Technician - Zematek</span><br>Completed a 560 training from 10/2024 - 01/2025, installing servers, configuring SIEM tools, repairing hardware and managing Active Directory.</li>
+                <li><br><span>Teacher Assistant - Le Wagon</span><br>From 07/2023 - 12/2023, supported students in web programming, provided one-on-one guidance and conducted sessions 100% in English.</li>
+                <li><br><span>Junior Cybersecurity & IT Technician - Zematek</span><br>Completed a 560 training from 10/2024 - 01/2025, installing servers, configuring SIEM tools, repairing hardware and managing Active Directory.</li>
               </ul>
             </div>
 
             <div class="tab-contents" id="certificates-tab">
               <ul>
                 <li><span>Google Cybersecurity Professional</span><br>Earned in 2024, covering fundamental cybersecurity concepts and practical security skills.</li>
-                <li><span>Azure: Azure Fundamentals (AZ-900)</span><br>Achieved in 2024, demonstrating foundational knowledge of Azure cloud services.</li>
-                <li><span>Azure: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Completed in 2025, focusing on security, compliance, and identity management in Azure.</li>
+                <li><br><span>Azure: Azure Fundamentals (AZ-900)</span><br>Achieved in 2024, demonstrating foundational knowledge of Azure cloud services.</li>
+                <li><br><span>Azure: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Completed in 2025, focusing on security, compliance, and identity management in Azure.</li>
               </ul>
             </div>
         </div>
