change on wazuh picture

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div id="about-me" class="container about-container">
       <h3 class="text-center">ABOUT ME</h3>
       <div class="small-bar text-center mb-3"></div>
-      <p class="text-center mb-5">Navigate through the tabs to get to know me better.</p>
+      <p class="text-center mb-5">Navigate through the tabs to discover more about my journey, skills, and experience.</p>
       <div class="row ">
         <div class="about-col-1 mb-5">
           <img src="/images/unnamed.jpeg">
@@ -215,7 +215,7 @@
           <div class="project">
             <img src="./images/pfsense.png">
             <div class="layer">
-              <h3>Pfsense Configuration</h3>
+              <h3>pfSense Configuration</h3>
               <p>Installed and configured a pfSense solution to set up a robust firewall, restrict access to specific websites, and overall enhance network security. <br><br>
                 Additionally, implemented traffic monitoring, VPN setup, and intrusion detection features to ensure a more secure and controlled network environment. </p>
             </div>
@@ -228,18 +228,18 @@
             </div>
           </div>
           <div class="project">
-            <img src="./images/greenbone.png">
+            <img src="./images/wazp.png">
+            <div class="layer">
+              <h3>Wazuh Deployment</h3>
+              <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines on another network. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./images/greenbone2.png">
             <div class="layer">
               <h3>Openvas Greenbone</h3>
               <p>Installed and configured OpenVAS on a Kali Linux virtual machine to conduct a deep network vulnerability analysis.<br><br>
                 By Performing scans to identify security flaws, misconfigurations, potential exploits across devices and services and also analysing the reports to prioritize risk mitigation strategies.</p>
-            </div>
-          </div>
-          <div class="project">
-            <img src="./images/wpic.png">
-            <div class="layer">
-              <h3>Wazuh Deployment</h3>
-              <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines on another network. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
             </div>
           </div>
           <div class="project">
