--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="container">
         <a id="home"></a>
         <div class="header-text">
-          <h1>Hi, I'm <span>Ruben</span><br>Mota From Portugal</h1>
-          <p>Cybersecurity Technician</p>
+          <h1>Hi, I'm <span>Ruben</span><br>Cybersecurity Technician</h1>
+          <p>Let's Secure Your Business</p>
         </div>
         <a href="#projects-me" class="button">PROJECTS</a>
       </div>
