--- a/index.html
+++ b/index.html
@@ -59,75 +59,6 @@
     <div class="wrapper">
       <div class="blur-bottom"></div>
     </div>
-
-  <!--
-  <a id="about-me"></a>
-  <div class="about-section">
-    <div class="container container-titles-projects mt-5 mb-5">
-      <h3 class="text-center">ABOUT ME</h3>
-      <div class="small-bar text-center"></div>
-    </div>
-
-    <div class="container px-4">
-      <div class="row gx-5 align-items-center">
-        <div class="col-12 col-lg-7">
-          <div class="justify">
-            <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My main goal is to contribute to the security of any system or data-asset.<br><br>
-            My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication.<br><br>
-            I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.<br><br>
-            With that in mind, I am open to job opportunities where I can contribute, learn, and grow.<br><br>
-            If you have a role that aligns with my skills and experience, please don't hesitate to contact me.</p>
-          </div>
-        </div>
-        <div class="col-12 col-lg-5 text-center mb-5">
-          <img src="./images/unnamed.jpeg" alt="Profile Picture" class="img-fluid shadow-5 avatar" style="width: 300px;">
-        </div>
-      </div>
-    </div>
-    <div class="container mt-5">
-      <h3 class="text-center">SKILLS</h3>
-      <div class="small-bar text-center"></div>
-      <p class="text-center mt-3">Here are some of the skills I've developed over the years</p>
-      <p class="text-center mt-3 font-semibold">Python, Ruby, JavaScript, SQL, Linux, Windows, Git, Azure Cloud</p>
-      <div class="d-flex flex-wrap justify-content-center mt-5">
-        <div class="skills-container">
-          <div class="skills">
-            <i class="fa-brands fa-python"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-solid fa-gem"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-brands fa-square-js"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-solid fa-database"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-brands fa-linux"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-brands fa-windows"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-brands fa-git-alt"></i>
-            <p class="text-center"></p>
-          </div>
-          <div class="skills">
-            <i class="fa-solid fa-cloud"></i>
-            <p class="text-center"></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
- -->
   <div id="#about">
     <div id="about-me" class="container about-container">
       <h3 class="text-center">ABOUT ME</h3>
@@ -175,18 +106,15 @@
 
             <div class="tab-contents" id="certificates-tab">
               <ul>
-                <li><span>Google Cybersecurity Professional</span><br>Earned in 2024, covering fundamental cybersecurity concepts and practical security skills.</li>
-                <li><br><span>Azure: Azure Fundamentals (AZ-900)</span><br>Achieved in 2024, demonstrating foundational knowledge of Azure cloud services.</li>
-                <li><br><span>Azure: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Completed in 2025, focusing on security, compliance, and identity management in Azure.</li>
+                <li><span>CompTIA Security +</span><br>Core cybersecurity principles, risk management, and hands-on security practices aligned with industry-standard frameworks.</li>
+                <li><br><span>Azure: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Focusing on security, compliance, and identity management in Azure.</li>
+                <li><br><span>Azure: Azure Fundamentals (AZ-900)</span><br>Demonstrating foundational knowledge of Azure cloud services.</li>
+                <li><span>Google Cybersecurity Professional</span><br>Covering fundamental cybersecurity concepts and practical security skills.</li>
               </ul>
             </div>
         </div>
       </div>
     </div>
-
-
-
-
 </div>
   <a id="projects-me"></a>
   <div class="project-section">
